# elrond-crowdfunding

./: Cargo.toml  README.md
mandos/: crowdfunding.scen.json  test-claim.scen.json  test-fund-too-late.scen.json  test-fund.scen.json  test-get-set-sum.scen.json  test-init.scen.json
meta/: Cargo.toml
src/: lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
