[package]
name = "crowdfunding"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
elrond-wasm-derive = "0.22.11"

[dependencies.elrond-wasm]
version = "0.25.0"

[dependencies.elrond-wasm-node]
version = "0.25.0"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.25.0"
